moved portfolio before CV

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,56 @@
   <div class="container-fluid">
     <div class="row personal-profile">
       <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
-        <h2>Persönliches Profil</h2>
+        <h2 class="text-center">Persönliches Profil</h2>
         <p>Ich bin ein selbstmotivierter, erfahrener Webdeveloper und schließe zur Zeit meinen Master im Studiengang MultiMedia Technology ab. Nebenbei arbeite ich als Freiberufler und erstelle Webseiten und Webservices. Durch meine mehrjährige Erfahrung mit HTML(5), CSS(3) und JavaScript sowie direktem Kundenkontakt habe ich gelernt schnell, effizient und detailorientiert zu arbeiten.</p>
         <p>Ich versuche ständing neue Techologien und Methoden zu erlernen oder auszuprobieren und bin jetzt, nach bald abgeschlossenem Studium, bereit für neue berufliche Herausforderungen.</p>
-        <p>Der Lebenslauf kann im <a href="downloads/Markus_Török_CV.docx">Word Format (.docx)</a> oder als <a href="downloads/Markus_Török_CV.pdf">PDF Datei (.pdf)</a> heruntergeladen werden.</p>
+        <p>Der Lebenslauf kann im <a href="downloads/Markus_Toeroek_CV.docx">Word Format (.docx)</a> oder als <a href="downloads/Markus_Toeroek_CV.pdf">PDF Datei (.pdf)</a> heruntergeladen werden.</p>
       </div>
     </div>
+
+  <section class="portfolio-items">
+    <div class="row">
+      <h2 class="text-center">Portfolio</h2>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>Andreas Ivanschitz</h3>
+          <a href="http://andreasivanschitz.com/"><img src="img/ivanschitz.png" class="img-responsive"></a>
+        </div>
+      </figure>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>Vanity</h3>
+          <a href="http://www.vanitythemovie.com/"><img src="img/vanity.jpg" class="img-responsive"></a>
+        </div>
+      </figure>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>TravelMate - Trivago Hackathon 2015</h3>
+          <a href="https://github.com/wasserball/TravelMate"><img src="img/travelmate.jpg" class="img-responsive"></a>
+        </div>
+      </figure>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>Witt "Style Park"</h3>
+          <a href="http://wittstylepark.at/"><img src="img/witt.png" class="img-responsive"></a>
+        </div>
+      </figure>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>Controllino</h3>
+          <a href="http://controllino.cc/"><img src="img/controllino.png" class="img-responsive"></a>
+        </div>
+      </figure>
+      <figure class="portfolio-item col-md-4 col-sm-6">
+        <div>
+          <h3>Archivia</h3>
+          <a href="http://www.archivia.at/"><img src="img/archivia.jpg" class="img-responsive"></a>
+        </div>
+
+      </figure>
+    </div>
+  </section>
+
     <div class="row">
       <div class="col-xs-12 col-md-6 experience">
         <h2>Berufserfahrung</h2>
@@ -131,43 +175,6 @@
         </ul>
       </div>
     </div>
-
-    <section class="portfolio-items">
-      <div class="row">
-        <h2 class="text-center">Portfolio</h2>
-        <figure class="portfolio-item col-md-4 col-sm-6">
-          <div>
-            <h3>Andreas Ivanschitz</h3>
-            <a href="http://andreasivanschitz.com/"><img src="img/ivanschitz.png" class="img-responsive"></a>
-          </div>
-        </figure>
-        <figure class="portfolio-item col-md-4 col-sm-6">
-          <div>
-            <h3>Vanity</h3>
-            <a href="http://www.vanitythemovie.com/"><img src="img/vanity.jpg" class="img-responsive"></a>
-          </div>
-        </figure>
-        <figure class="portfolio-item col-md-4 col-sm-6">
-          <div>
-            <h3>Witt "Style Park"</h3>
-            <a href="http://wittstylepark.at/"><img src="img/witt.png" class="img-responsive"></a>
-          </div>
-        </figure>
-        <figure class="portfolio-item col-md-4 col-sm-6">
-          <div>
-            <h3>Controllino</h3>
-            <a href="http://controllino.cc/"><img src="img/controllino.png" class="img-responsive"></a>
-          </div>
-        </figure>
-        <figure class="portfolio-item col-md-4 col-sm-6">
-          <div>
-            <h3>Archivia</h3>
-            <a href="http://www.archivia.at/"><img src="img/archivia.jpg" class="img-responsive"></a>
-          </div>
-
-        </figure>
-      </div>
-    </section>
 
     <footer>
       <h4>Kontakt</h4>
