changed jpgs to pngs

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <figure class="portfolio-item col-md-4 col-sm-6">
         <div>
           <h3>Andreas Ivanschitz</h3>
-          <a href="http://andreasivanschitz.com/"><img src="img/ivanschitz.png" class="img-responsive"></a>
+          <a href="http://andreasivanschitz.com/"><img src="img/ivanschitz.jpg" class="img-responsive"></a>
         </div>
       </figure>
       <figure class="portfolio-item col-md-4 col-sm-6">
@@ -60,13 +60,13 @@
       <figure class="portfolio-item col-md-4 col-sm-6">
         <div>
           <h3>Witt "Style Park"</h3>
-          <a href="http://wittstylepark.at/"><img src="img/witt.png" class="img-responsive"></a>
+          <a href="http://wittstylepark.at/"><img src="img/witt.jpg" class="img-responsive"></a>
         </div>
       </figure>
       <figure class="portfolio-item col-md-4 col-sm-6">
         <div>
           <h3>Controllino</h3>
-          <a href="http://controllino.cc/"><img src="img/controllino.png" class="img-responsive"></a>
+          <a href="http://controllino.cc/"><img src="img/controllino.jpg" class="img-responsive"></a>
         </div>
       </figure>
       <figure class="portfolio-item col-md-4 col-sm-6">
